@@ -1,10 +1,11 @@
 /*******************************************************************************
- * Copyright (c) 2017 Eurotech and/or its affiliates and others
+ * Copyright (c) 2017, 2021 Eurotech and/or its affiliates and others
  *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     Eurotech - initial API and implementation
@@ -18,11 +19,9 @@ import java.nio.charset.Charset;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Callable;
 
-import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletResponse;
 
 import org.eclipse.kapua.KapuaException;
@@ -35,6 +34,7 @@ import org.eclipse.kapua.service.account.AccountService;
 import org.eclipse.kapua.service.device.registry.Device;
 
 import com.opencsv.CSVWriter;
+import org.apache.commons.lang3.CharEncoding;
 
 public class DeviceExporterCsv extends DeviceExporter {
 
@@ -51,26 +51,24 @@ public class DeviceExporterCsv extends DeviceExporter {
 
     @Override
     public void init(String accountId, String accountName)
-            throws ServletException, IOException {
+            throws IOException {
         this.accountId = accountId;
         this.accountName = accountName;
         dateFormat = new SimpleDateFormat("MM/dd/yyyy HH:mm:ss.SSS");
 
-        OutputStreamWriter osw = new OutputStreamWriter(response.getOutputStream(), Charset.forName("UTF-8"));
+        OutputStreamWriter osw = new OutputStreamWriter(response.getOutputStream(), Charset.forName(CharEncoding.UTF_8));
         writer = new CSVWriter(osw);
-
-        List<String> cols = new ArrayList<String>();
-        Collections.addAll(cols, DEVICE_PROPERTIES);
-        writer.writeNext(cols.toArray(new String[] {}));
+        writer.writeNext(DEVICE_PROPERTIES);
     }
 
     @Override
     public void append(KapuaListResult<Device> devices)
-            throws ServletException, IOException, KapuaException {
+            throws KapuaException {
 
-        Account account = null;
+        Account account;
         try {
             account = KapuaSecurityUtils.doPrivileged(new Callable<Account>() {
+
                 @Override
                 public Account call() throws Exception {
                     return ACCOUNT_SERVICE.find(KapuaEid.parseCompactId(accountId));
@@ -171,20 +169,21 @@ public class DeviceExporterCsv extends DeviceExporter {
             // Custom attribute 5
             cols.add(device.getCustomAttribute5() != null ? device.getCustomAttribute5() : BLANK);
 
-            writer.writeNext(cols.toArray(new String[] {}));
+            writer.writeNext(cols.toArray(new String[]{ }));
         }
     }
 
     @Override
     public void close()
-            throws ServletException, IOException {
+            throws IOException {
         response.setContentType("text/csv");
-        response.setCharacterEncoding("UTF-8");
-        response.setHeader("Content-Disposition", "attachment; filename*=UTF-8''" + URLEncoder.encode(accountName, "UTF-8") + "_devices.csv");
+        response.setCharacterEncoding(CharEncoding.UTF_8);
+        response.setHeader("Content-Disposition", "attachment; filename*=UTF-8''" + URLEncoder.encode(accountName, CharEncoding.UTF_8) + "_devices.csv");
         response.setHeader("Cache-Control", "no-transform, max-age=0");
 
         writer.flush();
 
         writer.close();
     }
+
 }
